[tool.poetry]
name = "fapiao"
version = "0.1.0"
description = ""
authors = ["Liao Zhuodi <liao_zd@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.13"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
